# wub_cpylibs

./: MODULE.bazel  README.md
cpp/liba/: BUILD  hello_world.cc
python/liba/: BUILD  hello_bindings.cc
python/tests/: BUILD  test_hello_bindings.py
