module(
    name = "wub_cpylibs",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")


bazel_dep(name = "pybind11_bazel", version = "2.13.6")
